# tcc

./: .gitignore  Cargo.toml  README.md  README.pt-BR.md  docker-compose.yml  justfile
config/: default.toml
crates/relay/: Cargo.toml
crates/relay/src/: lib.rs  main.rs
crates/relay/tests/: e2e.rs  fullstack.rs  walkthrough.rs
crates/relay/tests/common/: mod.rs
crates/ssi-core/: Cargo.toml
crates/ssi-core/fixtures/pki/: expired_leaf.key  expired_leaf.pem  mec_intermediate.pem  rogue_leaf.key  rogue_leaf.pem
crates/ssi-core/src/: crypto.rs  dcql.rs  holder.rs  issuer_trust.rs  jwe.rs  lib.rs  oid4vci.rs  oid4vp.rs  resolve.rs  sd_jwt.rs  status.rs  testkit.rs  trust.rs  wallet_sim.rs  x509.rs
crates/ssi-core/tests/: engine.rs
crates/verifier-wasm/: Cargo.toml
crates/verifier-wasm/src/: lib.rs
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: lib.rs  main.rs
crates/wallet-core/tests/: oracle_roundtrip.rs
crates/wallet-ffi/: Cargo.toml
crates/wallet-ffi/src/: lib.rs
docs/: INSTALL.md  INSTALL.pt-BR.md
migrations/: 0001_init.sql  0002_status_lists.sql  0003_oauth_state.sql  0004_diploma_details.sql
src/: config.rs  db.rs  diploma.rs  error.rs  handlers.rs  identity.rs  lib.rs  main.rs  oid4vci.rs  oidc_mock.rs  router.rs  state.rs  status.rs  telemetry.rs
tests/: e2e.rs  negative.rs  status_index.rs  walkthrough.rs
tests/common/: mod.rs
type-metadata/: MobileDriversLicense-v1.json  UniversityDiploma-v1.json
wallet/: .gitignore  README.md  README.pt-BR.md  build.gradle.kts  settings.gradle.kts
wallet/app/: build.gradle.kts  proguard-rules.pro
wallet/app/src/androidTest/kotlin/com/tcc/wallet/: RustEngineInstrumentedTest.kt
wallet/app/src/main/: AndroidManifest.xml
wallet/app/src/main/kotlin/com/tcc/wallet/: KeystoreHolderKey.kt  MainActivity.kt  QrScanner.kt  WalletStore.kt
wallet/app/src/main/kotlin/com/tcc/wallet/ui/: WalletUiState.kt  WalletViewModel.kt
wallet/app/src/main/kotlin/com/tcc/wallet/ui/components/: Components.kt  CredentialCard.kt  JsonHighlight.kt  SectionCard.kt  Sheet.kt  Toast.kt
wallet/app/src/main/kotlin/com/tcc/wallet/ui/model/: CredentialView.kt  DisplayMapper.kt
wallet/app/src/main/kotlin/com/tcc/wallet/ui/screens/: CredentialDetailScreen.kt  HomeScreen.kt  JsonSheet.kt  PresentSheet.kt  ReceiveSheet.kt
wallet/app/src/main/kotlin/com/tcc/wallet/ui/theme/: Color.kt  Theme.kt  Tokens.kt  Type.kt
wallet/app/src/main/res/values/: strings.xml
wallet/app/src/main/res/xml/: network_security_config.xml
wallet/gradle/: libs.versions.toml
wallet/ssi/: build.gradle.kts
wallet/ssi/src/main/kotlin/com/tcc/wallet/ssi/: Bytes.kt  Dcql.kt  Ec.kt  HolderKey.kt  IssuerTrust.kt  Jar.kt  Jwe.kt  Jws.kt  KotlinHolderSigner.kt  KotlinSsiEngine.kt  RustSsiEngine.kt  SdJwt.kt  SsiEngine.kt
wallet/ssi/src/main/kotlin/com/tcc/wallet/ssi/net/: Http.kt  OfferLink.kt  Oid4vciClient.kt  Oid4vpPresenter.kt  ScanDispatch.kt
wallet/ssi/src/test/kotlin/com/tcc/wallet/ssi/: ConformanceTest.kt  EngineParityTest.kt  EngineUnitTest.kt  IssuerTrustTest.kt  OfferLinkTest.kt  Oid4vciAuthCodeTest.kt  ScanDispatchTest.kt  SignedMetadataTest.kt
wallet/ssi/src/test/resources/pki/: icp_brasil_root.pem  rogue_root.pem  ufsc_leaf.key  ufsc_leaf.pem
web/: index.html  main.js
