[package]
name = "issuer_backend"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["crates/ssi-core", "crates/verifier-wasm", "crates/relay", "crates/wallet-core"]

# Single source of truth for deps shared by more than one workspace member, so a
# version bump is one edit and feature sets can't silently diverge. `p256` carries
# the union of features any member needs (`jwk` for ssi-core's JWK conversion);
# `flate2` pins the pure-Rust `rust_backend` so the wasm graph stays C-free.
# Members inherit with `{ workspace = true }` and may add extra features on top
# (e.g. `chrono`'s `serde`/`clock`).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p256 = { version = "0.13", features = ["ecdsa", "jwk", "pkcs8", "ecdh"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
chrono = { version = "0.4" }
url = "2"
anyhow = "1"

[dependencies]
ssi-core = { path = "crates/ssi-core" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
# ES256 issuer signing (the leaf cert's P-256 key, loaded from PKCS#8). The
# holder/EdDSA keypair types live in `ssi-core` (re-exported as `crate::holder`).
p256 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
url = { workspace = true }
thiserror = "2"
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
